--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "node --watch ./app.js",
+    "dev": "node --watch ./src/app.js",
     "model": "node ./src/config/sync.models.js"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
     "sequelize": "^6.37.3",
