--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
+    "resend": "^4.0.0",
     "sequelize": "^6.37.3",
     "zod": "^3.23.8"
   }
