--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "resend": "^4.0.0",
     "sequelize": "^6.37.3",
     "zod": "^3.23.8"
