--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -24,6 +24,9 @@
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
     "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0",
     "zod": "^3.23.8"
   }
 }
