--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "model": "node ./src/config/syncModels.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
