--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "theme-change": "^2.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
