--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,14 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-pino-logger": "^7.0.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
