--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chalk": "^5.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -18,6 +19,7 @@
     "express": "^4.21.0",
     "express-pino-logger": "^7.0.0",
     "express-session": "^1.18.0",
+    "figlet": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
