--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "boring-avatars": "^1.11.2",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "theme-change": "^2.5.0",
+    "use-sound": "^4.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
