--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@chakra-ui/react": "^3.1.2",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.7",
     "@mui/x-charts": "^7.22.2",
     "axios": "^1.7.7",
     "boring-avatars": "^1.11.2",
     "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.11.17",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.13.3",
+    "rsuite": "^5.74.2",
     "theme-change": "^2.5.0",
+    "tippy.js": "^6.3.7",
     "use-sound": "^4.0.3",
     "zod": "^3.23.8"
   },
@@ -44,6 +56,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-tsconfig-paths": "^5.1.3"
   }
 }
